fixed sizing issue on mobile

--- a/src/components/aboutMe/AboutMe.scss
+++ b/src/components/aboutMe/AboutMe.scss
@@ -127,7 +127,6 @@
             h2 {
                 font-size: 1.7rem;
                 color: $text;
-                margin: 1rem 0rem;
                 max-height: 5rem;
                 position: relative;
                 margin-top: 1rem;
@@ -200,7 +199,7 @@
         }
 
         .right .card{
-            height: 90%;
+            height: 75%;
             width: 80%;
 
         }
