--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -44,7 +44,7 @@
   }
 
   .container {
-    width: 100%;
+    width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,7 +85,7 @@
         color: $text;
         bottom: 10%;
         text-decoration: none;
-        font-size: 1.3rem ;
+        font-size: 1.3rem;
 
         &:active:hover {
           transform: scale(1.1);
@@ -128,7 +128,6 @@
         width: 13rem;
         height: 10rem;
         margin: 1rem 1.7rem;
-
       }
     }
   }
